use vote.org tool

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <header class="jumbotron">
 	<div class="container">
 		<h1>You know what's cool? Voting!</h1>
-		<p style="margin-bottom: 1.5rem;">TikTok and Instagram will still be there after the election, but your <strong>rights</strong> may not. Take a 2 minute break and register to vote.<br>To be oh so cool and informed, make sure to check the deadlines and important info tabs for more.</p>
+		<p style="margin-bottom: 1.5rem;">TikTok and Instagram will still be there after the election, but your <strong>rights</strong> may not. Take a 2 minute break and register to vote, or check if you're already registered <a href="https://becoolandvote.herokuapp.com/registrationstatus">here</a>.<br>To be oh so cool and informed, make sure to check the deadlines and important info tabs for more.</p>
 		<!-- Display the countdown timer in an element -->
 			<div id="countdown">
 				<h2 id="demo"></h2>
@@ -47,42 +47,16 @@
 	</div>
 </header>
 
-
-<!-- <h4 style="text-align: center;">Deadlines</h4> -->
-<script type="text/javascript"  src="https://register.rockthevote.com/assets/rtv-iframe.js"></script> <script type="text/javascript">
+<!-- Rock the Vote Registration Tool -->
+<!-- <script type="text/javascript"  src="https://register.rockthevote.com/assets/rtv-iframe.js"></script> <script type="text/javascript">
 	RtvIframe.init({
 		 partner: 1,
 		 source: "ovrpage"
 	  })
- </script>
-<!-- <div class="row text-center" style="display: flex; flex-wrap: wrap;">
-	<div class="col-lg-4 col-md-4 col-sm-6">
-		<div class="thumbnail">
-			<strong>California</strong>
-			<div>Registration Date: Oct 19</div>
-			<div>Mail in: Oct 19</div>
-		</div>
-	</div>
-	<div class="col-lg-4 col-md-4 col-sm-6">
-		<div class="thumbnail">
-			<strong>California</strong>
-			<div>Registration Date: Oct 19</div>
-		</div>
-	</div>
-	<div class="col-lg-4 col-md-4 col-sm-6">
-		<div class="thumbnail">
-			<strong>California</strong>
-			<div>Registration Date: Oct 19</div>
-		</div>
-	</div>
-	<div class="col-lg-4 col-md-4 col-sm-6">
-		<div class="thumbnail">
-			<strong>California</strong>
-			<div>Registration Date: Oct 19</div>
-			<div>Mail in: Oct 19</div>
-		</div>
-	</div>
-</div> -->
+ </script> -->
+
+ <!-- Vote.org Registration Tool -->
+<iframe src="https://register.vote.org/?partner=111111&campaign=free-tools" width="100%" marginheight="0" frameborder="0" id="frame1" scrollable ="no"></iframe><script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.3/iframeResizer.min.js"></script><script type="text/javascript">iFrameResize({ log:true, checkOrigin:false});</script>
 
 
 
