--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,9 @@
 					<a class="nav-link" href="/deadlines">Voter Registration Deadlines</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="/absenteeballot">Request Absentee Ballot</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="/moreinfo">Very Important Stuff</a>
 				</li>
 			</ul>
