--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,7 @@
 			}, 1000);
 			</script>
 			<!-- END TIMER -->
-		<p style="text-align: right; margin-top: 1.5rem;"><i>"Ya'll want all these rights and sh*t, then f*cking PULL UP."</i><br> -Tyler the Creator, '20</p>
+		<p style="text-align: right; margin-top: 1.5rem;"><i>"Y'all want all these rights and sh*t, then f*cking PULL UP."</i><br> -Tyler the Creator, '20</p>
 		<!-- <p><a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Restaurant</a></p> -->
 	</div>
 </header>
