--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,7 +44,7 @@
 					<a class="nav-link" href="/deadlines">Voter Registration Deadlines</a>
 				</li>
 				<li class="nav-item <%= typeof page !== 'undefined' && page === 'absenteeballot' ? 'active' : '' %>">
-					<a class="nav-link" href="/absenteeballot">Request Absentee Ballot</a>
+					<a class="nav-link" href="/absenteeballot">Absentee Ballot</a>
 				</li>
 				<li class="nav-item <%= typeof page !== 'undefined' && page === 'moreinfo' ? 'active' : '' %>">
 					<a class="nav-link" href="/moreinfo">Very Important Stuff</a>
