--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,9 @@
 <header class="jumbotron">
 	<div class="container">
 		<h1>You know what's cool? Voting!</h1>
-		<p style="margin-bottom: 1.5rem;">TikTok and Instagram will still be there after the election, but your <strong>rights</strong> may not. Take a 2 minute break and register to vote, or check if you're already registered <a href="/registrationstatus">here</a>.<br>To be oh so cool and informed, make sure to check the deadlines and important info tabs for more.</p>
+		<p style="margin-bottom: .5rem;">TikTok and Instagram will still be there after the election, but your <strong>rights</strong> may not.
+			<p>Take a 2 minute break and register to vote.<br>If you've already registered, double check your registration status <a href="/registrationstatus">here</a>. Check out the tabs above or in the drop-down menu for more important info.</p>
+		</p>
 		<!-- Display the countdown timer in an element -->
 			<div id="countdown">
 				<h2 id="demo"></h2>
