--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -1,7 +1,7 @@
 <%- include("./partials/header") %>
 
-<div class="thumbnail">
-	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: .7rem;">IDK! I need more help.</h3>
+<div class="thumbnail" style="padding: 8px 18px;">
+	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: .7rem; margin-top: .4rem;">IDK! I need more help.</h3>
 	<strong>Here are some important resources:</strong>
 	<ul>
 		<li>Don't know who to vote for? Decide for yourself: 
@@ -17,8 +17,8 @@
 	</ul>
 </div>
 
-<div class="thumbnail">
-	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem;">Don't be dumb! Mistakes that can disqualify your mail/absentee ballot:</h3>
+<div class="thumbnail" style="padding: 8px 18px;">
+	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">Don't be dumb! Mistakes that can disqualify your mail/absentee ballot:</h3>
 	<p>
 		<strong>1. Improperly filling out your ballot</strong> (ex: using the wrong color ink). You're reading this sentence so I know you can read- go through the instructions on the ballot carefully.<br>
 		<strong>2. Forgetting to sign your envelope.</strong> This is the most common reason for a rejected application or ballot. Don't be that person, you're better than that.<br>
@@ -28,8 +28,8 @@
 	</p>
 </div>
 
-<div class="thumbnail">
-	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem;">Think your vote doesn't matter? Too lazy? Think again, you silly goose.<br>Here are some close races from recent years:</h3>
+<div class="thumbnail" style="padding: 8px 18px;">
+	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">Think your vote doesn't matter? Too lazy? Think again, you silly goose.<br>Here are some close races from recent years:</h3>
 	<ul>
 		<li><strong>2018: </strong>Democratic primary for Baltimore County executive was decided by just 17 votes.</li>
 		<li><strong>2017: </strong>Virginia House of Delegates race ended in a tie out of more than 23,000 votes. The tie was broken by pulling a name out of a bowl (this is sadly not a joke). Republican David Yancey won, which gave Republicans control of the state House by a single seat.</li>
