many changes to info page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -63,6 +63,17 @@ h1 {
 	margin-bottom: 20px;
 }
 
+.btn {
+	white-space:normal !important;
+	word-wrap: break-word;
+	margin-bottom: 1rem;
+}
+
+.lessbold{
+	font-weight: 600;
+}
+
+
 /* for mobile screen size, was normally max width 500 */
 @media only screen and (max-width: 770px){
 	#countdown{
