--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -1,24 +1,108 @@
 <%- include("./partials/header") %>
 
-<div class="thumbnail" style="padding: 8px 18px;">
-	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: .7rem; margin-top: .4rem;">IDK! I need more help.</h3>
-	<strong>Here are some important resources:</strong>
-	<ul>
-		<li>Don't know who to vote for? Decide for yourself: 
-			<ul>
-				<li><a target="_blank" href="https://2020election.procon.org/view.source-summary-chart.php">2020 Presidential Candidate Comparison</a></li>
-				<li><a target="_blank" href="https://www.investopedia.com/comparing-the-economic-plans-of-trump-and-biden-4843240">Comparing the Economic Plans of Trump and Biden</a></li>
-				<li><a target="_blank" href="https://itif.org/publications/2020/09/28/trump-vs-biden-comparing-candidates-positions-technology-and-innovation">Trump vs. Biden: Comparing the Candidates’ Positions on Technology and Innovation</a></li>
-				<li><a target="_blank" href="https://educationvotes.nea.org/presidential-2020/biden-vs-trump/">Trump vs. Biden on Public Education</a></li>
-			</ul>
-		</li>
-		<li>Info on registering, voting, and more at <a target="_blank" href="https://www.vote.org/">vote.org</a> and <a target="_blank" href="https://iwillvote.com/">iwillvote.com</a></li>
-		<li><a target="_blank" href="https://iamavoter.com/">iamavoter.com</a> or check out their Instagram: <a target="_blank" href="https://www.instagram.com/iamavoter/?hl=en">@iamavoter</a></li>
-	</ul>
+<div style="text-align: center; color: whitesmoke; margin-bottom: 2rem;">
+	<h1 style="font-family: 'Oswald', sans-serif;">Very Important Stuff</h1>
+	<div>Flex on your friends and stay informed.<br>Click on any of the quick links below to get started.</div>
+</div>
+
+<div class="row text-center" style="display: flex; flex-wrap: wrap; text-align: center; color: whitesmoke; margin-bottom: 2rem;">
+	<div class="col-sm-6">
+		<a href="#morehelp" class="btn btn-sm btn-dark btn-block">Who should I vote for?</a>
+	</div>
+	<div class="col-sm-6">
+		<a href="#debate" class="btn btn-sm btn-dark btn-block">2020 Debate Schedule</a>
+	</div>
+	<div class="col-sm-6">
+		<a href="#mistakes" class="btn btn-sm btn-dark btn-block">Common Ballot Mistakes</a>
+	</div>
+	<div class="col-sm-6">
+		<a href="#closeraces" class="btn btn-sm btn-dark btn-block">Why your vote matters!</a>
+	</div>
 </div>
 
 <div class="thumbnail" style="padding: 8px 18px;">
-	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">Don't be dumb! Mistakes that can disqualify your mail/absentee ballot:</h3>
+	<h3 id="morehelp" style="font-family: 'Oswald', sans-serif; margin-bottom: .7rem; margin-top: .4rem;">Who should I vote for?</h3>
+	<p>Decide for yourself! Here are some resources to help:</p>
+	<ul>
+		<li><a target="_blank" href="https://2020election.procon.org/view.source-summary-chart.php">2020 Presidential Candidate Comparison</a></li>
+		<li><a target="_blank" href="https://www.investopedia.com/comparing-the-economic-plans-of-trump-and-biden-4843240">Comparing the Economic Plans of Trump and Biden</a></li>
+		<li><a target="_blank" href="https://itif.org/publications/2020/09/28/trump-vs-biden-comparing-candidates-positions-technology-and-innovation">Trump vs. Biden: Comparing the Candidates’ Positions on Technology and Innovation</a></li>
+		<li><a target="_blank" href="https://educationvotes.nea.org/presidential-2020/biden-vs-trump/">Trump vs. Biden on Public Education</a></li>
+	</ul>
+	<hr>
+	<!-- <ul>
+		<li>Info on registering, voting, and more at <a target="_blank" href="https://www.vote.org/">vote.org</a> and <a target="_blank" href="https://iwillvote.com/">iwillvote.com</a></li>
+		<li><a target="_blank" href="https://iamavoter.com/">iamavoter.com</a> or check out their Instagram: <a target="_blank" href="https://www.instagram.com/iamavoter/?hl=en">@iamavoter</a></li>
+	</ul> -->
+</div>
+
+<div class="thumbnail" style="padding: 8px 18px;">
+	<h3 id="debate" style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">2020 Debate Schedule:</h3>
+	<p>Tune in to future debates or watch previous ones if you missed them. Even if you don't like politics, these are going to be <em>spicy</em>. You don't want to miss this. <br>All debates start at 9:00 PM EST.</p>
+	<div style="font-size: 1.3rem; text-align: center; margin-bottom: .7rem;"><b><u>PRESIDENTIAL DEBATES</u></b></div>
+	President Trump vs. Biden
+	<ol>
+		<b><li>September 29</b>
+			<br><div style="font-size: .9rem;">
+				<ul>
+					<li><b class="lessbold">Moderator:</b> Chris Wallace, Fox News anchor</li>
+					<li><b class="lessbold">Format:</b> 90 min, 6 segments of 15 min each.</li>
+					<li><b class="lessbold">Topics covered:</b>
+						<ul>
+							<li>The Trump and Biden Records</li>
+							<li>The Supreme Court</li>
+							<li>Covid-19</li>
+							<li>The Economy</li>
+							<li>Race and Violence in our Cities</li>
+							<li>The Integrity of the Election</li>
+						</ul>
+					<li><b class="lessbold">Watch:</b> <a target="_blank" href="https://www.youtube.com/watch?v=wW1lY5jFNcQ&feature=youtu.be">First Presidential Debate</a></li>
+					</li>
+				</ul>
+			</div>
+		</li>
+		<li><b>October 15</b></li>
+		<div style="font-size: .9rem;">
+			<ul>
+				<li><b class="lessbold">Moderator:</b>
+					Steve Scully of C-SPAN
+				</li>
+				<li><b class="lessbold">Format:</b> 90 min. This debate will be town-hall style: the questions will be posed by citizens from the South Florida area. Both candidates will have 2 minutes to respond to each question. The town meeting participants will be uncommitted voters chosen under the superivion of Frank Newport, a senior scientist at Gallup.</li>
+				<li><b class="lessbold">Watch:</b> ABC, CBS, NBC, PBS, Fox News and C-SPAN will stream the debate live on <a target="_blank" href="https://www.youtube.com/">Youtube</a>.
+				</li>
+			</ul>
+		</div>
+		<li><b>October 22</b>
+			<div style="font-size: .9rem;">
+				<ul>
+					<li><b class="lessbold">Moderator:</b>
+						Kristen Welker, NBC News White House Correspondent & <em>Weekend Today</em> co-anchor
+					</li>
+					<li><b class="lessbold">Format:</b> Identical to first presidential debate.
+					<li><b class="lessbold">Watch:</b> ABC, CBS, NBC, PBS, Fox News and C-SPAN will stream the debate live on <a target="_blank" href="https://www.youtube.com/">Youtube</a>.
+				</ul>
+			</div>
+		</li>
+	</ol>
+	<div style="font-size: 1.3rem; text-align: center; margin-bottom: .7rem; margin-top: 1.2rem;"><b><u>VP DEBATE</u></b></div>
+	VP Pence vs. Senator Harris
+	<ol><strong><li>October 7</strong>
+		<div style="font-size: .9rem;">
+			<ul>
+				<li><b class="lessbold">Moderator:</b> Susan Page, Washington Bureau Chief for USA Today
+				</li>
+				<li><b class="lessbold">Format:</b> 90 min, nine 10-min segments. The moderator will ask an opening question, then each candidate will have 2 minutes to respond.
+				</li>
+				<li><b class="lessbold">Watch:</b> <a target="_blank"href="https://www.youtube.com/watch?v=t_G0ia3JOVs">VP Debate</a></li>
+			</ul>	
+		</div>
+		</li>
+	</ol>
+	<hr>
+</div>
+
+<div class="thumbnail" style="padding: 8px 18px;">
+	<h3 id="mistakes" style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">Don't be dumb! Mistakes that can disqualify your mail/absentee ballot:</h3>
 	<p>
 		<strong>1. Improperly filling out your ballot</strong> (ex: using the wrong color ink). You're reading this sentence so I know you can read- go through the instructions on the ballot carefully.<br>
 		<strong>2. Forgetting to sign your envelope.</strong> This is the most common reason for a rejected application or ballot. Don't be that person, you're better than that.<br>
@@ -26,10 +110,11 @@
 		<strong>4. Not including required documentation.</strong> Some states make you take that extra annoying step, like having a signature from a witness. Check out <a target="_blank" href="https://www.voteriders.org/">VoteRiders</a> to see your state's In-Person and Mail voter ID rules. Super easy, I belive in you.<br>
 		<strong>5. Sending your ballot back too late.</strong> Another common reason why mail ballots are rejected is because they're too late or lack a postmark. Fashionably late doesn't apply in this case. Unfortunately if you're late to this party you're stupid, not cool. Be smart and check your state's mail-in ballot deadlines <a target="_blank" href="https://time.com/5889969/how-to-vote-by-mail/">in this article</a>.
 	</p>
+	<hr>
 </div>
 
 <div class="thumbnail" style="padding: 8px 18px;">
-	<h3 style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">Think your vote doesn't matter? Too lazy? Think again, you silly goose.<br>Here are some close races from recent years:</h3>
+	<h3 id="closeraces" style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">Think your vote doesn't matter? Too lazy? Think again, you silly goose.<br>Here are some close races from recent years:</h3>
 	<ul>
 		<li><strong>2018: </strong>Democratic primary for Baltimore County executive was decided by just 17 votes.</li>
 		<li><strong>2017: </strong>Virginia House of Delegates race ended in a tie out of more than 23,000 votes. The tie was broken by pulling a name out of a bowl (this is sadly not a joke). Republican David Yancey won, which gave Republicans control of the state House by a single seat.</li>
@@ -38,6 +123,7 @@
 	<p style="font-size: .8rem;">
 		I could list more, but you don't care. Bottom line is your vote matters, whether it's at the local, state, or national level. Go out and vote, then at least you can say you did something. If you do care though, here's the article: <a target="_blank" href="https://www.npr.org/2018/11/03/663709392/why-every-vote-matters-the-elections-decided-by-a-single-vote-or-a-little-more">Why Every Vote Matters</a><em> (shoutout to NPR for all info listed above)</em>.
 	</p>
+	<hr>
 </div>
 
 
