add new vote page

--- a/views/deadlines.ejs
+++ b/views/deadlines.ejs
@@ -4,6 +4,15 @@
 	<h5>Election Day: November 3, 2020</h5>
 </div>
 
+<div class="row text-center" style="display: flex; flex-wrap: wrap; text-align: center; color: whitesmoke; margin-bottom: 2rem;">
+	<div class="col-sm-6">
+		<a href="/" class="btn btn-sm btn-dark btn-block" style="padding: 10px 20px;">Register Here</a>
+	</div>
+	<div class="col-sm-6">
+		<a href="/registrationstatus" class="btn btn-sm btn-dark btn-block" style="padding: 10px 20px;">Check Registration Status</a>
+	</div>
+</div>
+
 <div class="row text-center" style="display: flex; flex-wrap: wrap;">
 	<% deadlines.forEach((deadline)=>{ %>
 	<div class="col-lg-4 col-md-4 col-sm-6">
