--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -7,16 +7,16 @@
 
 <div class="row text-center" style="display: flex; flex-wrap: wrap; text-align: center; color: whitesmoke; margin-bottom: 2rem;">
 	<div class="col-sm-6">
-		<a href="#morehelp" class="btn btn-sm btn-dark btn-block">Who should I vote for?</a>
+		<a href="#morehelp" class="btn btn-sm btn-dark btn-block" style="padding: 10px 20px;">Who should I vote for?</a>
 	</div>
 	<div class="col-sm-6">
-		<a href="#debate" class="btn btn-sm btn-dark btn-block">2020 Debate Schedule</a>
+		<a href="#debate" class="btn btn-sm btn-dark btn-block" style="padding: 10px 20px;">2020 Debate Schedule</a>
 	</div>
 	<div class="col-sm-6">
-		<a href="#mistakes" class="btn btn-sm btn-dark btn-block">Common Ballot Mistakes</a>
+		<a href="#mistakes" class="btn btn-sm btn-dark btn-block" style="padding: 10px 20px;">Common Ballot Mistakes</a>
 	</div>
 	<div class="col-sm-6">
-		<a href="#closeraces" class="btn btn-sm btn-dark btn-block">Why your vote matters!</a>
+		<a href="#closeraces" class="btn btn-sm btn-dark btn-block" style="padding: 10px 20px;">Why your vote matters!</a>
 	</div>
 </div>
 
