--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,9 @@
 
 			gtag('config', 'UA-176739825-3');
 		</script>
+		
+		<!-- Avoid favicon error -->
+		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
 
 		<!-- Make site responsive on mobile/tablet -->
 		<meta charset="UTF-8">
@@ -40,15 +43,18 @@
 				<li class="nav-item <%= typeof page !== 'undefined' && page === 'moreinfo' ? 'active' : '' %>">
 					<a class="nav-link" href="/moreinfo">Very Important Stuff</a>
 				</li>
-				<li class="nav-item <%= typeof page !== 'undefined' && page === 'registrationstatus' ? 'active' : '' %>">
+				<!-- <li class="nav-item <%= typeof page !== 'undefined' && page === 'registrationstatus' ? 'active' : '' %>">
 					<a class="nav-link" href="/registrationstatus">Registration Status</a>
-				</li>
+				</li> -->
 				<li class="nav-item <%= typeof page !== 'undefined' && page === 'deadlines' ? 'active' : '' %>">
 					<a class="nav-link" href="/deadlines">Voter Registration Deadlines</a>
 				</li>
-				<li class="nav-item <%= typeof page !== 'undefined' && page === 'absenteeballot' ? 'active' : '' %>">
-					<a class="nav-link" href="/absenteeballot">Absentee Ballot</a>
+				<li class="nav-item <%= typeof page !== 'undefined' && page === 'howtovote' ? 'active' : '' %>">
+					<a class="nav-link" href="/howtovote">How Do I Vote?!</a>
 				</li>
+				<!-- <li class="nav-item <%= typeof page !== 'undefined' && page === 'absenteeballot' ? 'active' : '' %>">
+					<a class="nav-link" href="/absenteeballot">Absentee Ballot</a>
+				</li> -->
 			</ul>
 		</div>
 	</div>
