edit link to absentee ballot deadlines

--- a/views/howtovote.ejs
+++ b/views/howtovote.ejs
@@ -38,7 +38,7 @@
 	<a class="btn btn-sm btn-dark" style="color: whitesmoke;">Request Absentee Ballot Here</a>
 	<div><u><b>Absentee or Mail-In Voting</b></u></div>
 	<ul>
-		<li>Don't be late. Know your state's <a target="_blank" href="/deadlines">absentee ballot deadlines</a>. *Some are <i>postmarked</i> deadlines while others are <i>received</i> deadlines, read carefully!</li>
+		<li>Don't be late. Know your state's <a target="_blank" href="https://www.vote.org/absentee-ballot-deadlines/">absentee ballot deadlines</a>. *Some are <i>postmarked</i> deadlines while others are <i>received</i> deadlines, read carefully!</li>
 		<li>Every state has mail-in voting, but some allow you to take part only in certain circumstances.
 			<ul>
 				<li>Some states require an excuse for voting by mail. Reasons can include: 
