add no online voting

--- a/views/howtovote.ejs
+++ b/views/howtovote.ejs
@@ -31,13 +31,15 @@
 		<li>Find out if you need to bring and ID to vote: <a target="_blank" href="https://www.ncsl.org/research/elections-and-campaigns/voter-id.aspx#Laws%20in%20Effect">your state's Voter ID laws</a></li>
 		<li>First time voters who didn't register in person or show ID before must show identification.</li>
 	</ul>
+	<hr>
 </div>
 
 <div class="thumbnail" style="padding: 8px 18px;">
 	<h3 id="morehelp" style="font-family: 'Oswald', sans-serif; margin-bottom: .7rem; margin-top: .4rem;">Absentee and Early Voting</h3>
-	<a class="btn btn-sm btn-dark" style="color: whitesmoke;">Request Absentee Ballot Here</a>
+	<a class="btn btn-sm btn-dark" style="color: whitesmoke;" href="/absenteeballot">Request Absentee Ballot Here</a>
 	<div><u><b>Absentee or Mail-In Voting</b></u></div>
 	<ul>
+		<li><b class="lessbold">You can't vote online</b> for federal elections in the US. The only way you can vote without going in person to a polling place is to use an absentee ballot. Sorry hackers.</li>
 		<li>Don't be late. Know your state's <a target="_blank" href="https://www.vote.org/absentee-ballot-deadlines/">absentee ballot deadlines</a>. *Some are <i>postmarked</i> deadlines while others are <i>received</i> deadlines, read carefully!</li>
 		<li>Every state has mail-in voting, but some allow you to take part only in certain circumstances.
 			<ul>
@@ -57,6 +59,7 @@
 		<li>You don't need an excuse to vote early.</li>
 		<li>This <a target="_blank" href="https://www.ncsl.org/research/elections-and-campaigns/early-voting-in-state-elections.aspx#Early%20Voting%20Law%20Table">early voting chart</a> shows time frames for states that offer early voting. Let's do the dang thing!</li>
 	</ul>
+	<hr>
 </div>
 
 <%- include("./partials/footer") %>
