--- a/views/howtovote.ejs
+++ b/views/howtovote.ejs
@@ -28,7 +28,7 @@
 	<br>Never come empty handed.
 	<ul>
 		<li>2/3 of states expect you to provide identification if you want to vote at the polls.</li>
-		<li>Find out if you need to bring and ID to vote: <a target="_blank" href="https://www.ncsl.org/research/elections-and-campaigns/voter-id.aspx#Laws%20in%20Effect">your state's Voter ID laws</a></li>
+		<li>Find out if you need to bring an ID to vote: <a target="_blank" href="https://www.ncsl.org/research/elections-and-campaigns/voter-id.aspx#Laws%20in%20Effect">your state's Voter ID laws</a></li>
 		<li>First time voters who didn't register in person or show ID before must show identification.</li>
 	</ul>
 	<hr>
