more comparison links

--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -22,12 +22,16 @@
 
 <div class="thumbnail" style="padding: 8px 18px;">
 	<h3 id="morehelp" style="font-family: 'Oswald', sans-serif; margin-bottom: .7rem; margin-top: .4rem;">Who should I vote for?</h3>
-	<p>Decide for yourself! Here are some resources to help:</p>
+	<p>Decide for yourself! Here are some resources to help.</p>
+	<div style="text-align: center; margin-bottom: 1rem; font-size: 1rem;"><u><b>Comparing Trump vs. Biden's policies on:</b></u></div>
 	<ul>
-		<li><a target="_blank" href="https://2020election.procon.org/view.source-summary-chart.php">2020 Presidential Candidate Comparison</a></li>
-		<li><a target="_blank" href="https://www.investopedia.com/comparing-the-economic-plans-of-trump-and-biden-4843240">Comparing the Economic Plans of Trump and Biden</a></li>
-		<li><a target="_blank" href="https://itif.org/publications/2020/09/28/trump-vs-biden-comparing-candidates-positions-technology-and-innovation">Trump vs. Biden: Comparing the Candidates’ Positions on Technology and Innovation</a></li>
-		<li><a target="_blank" href="https://educationvotes.nea.org/presidential-2020/biden-vs-trump/">Trump vs. Biden on Public Education</a></li>
+		<li><a target="_blank" href="https://www.investopedia.com/comparing-the-economic-plans-of-trump-and-biden-4843240">Economy</a></li>
+		<li><a target="_blank" href="https://itif.org/publications/2020/09/28/trump-vs-biden-comparing-candidates-positions-technology-and-innovation">Technology and Innovation</a></li>
+		<li><a target="_blank" href="https://www.everydayhealth.com/healthy-living/trump-vs-biden-on-key-health-issues/">Healthcare</a></li>
+		<li><a target="_blank" href="https://www.bestcolleges.com/blog/biden-trump-education-plans-policy/">Education- Schools and Colleges</a>, <a target="_blank" href="https://www.americanactionforum.org/insight/comparing-trump-and-bidens-k-12-education-plans/">K-12 Education Plans</a></li>
+		<li><a target="_blank" href="https://www.wsj.com/articles/where-trump-and-biden-stand-on-foreign-policy-11600507801">Foreign Policy</a></li>
+		<li><a target="_blank" href="https://www.wsj.com/articles/where-trump-and-biden-stand-on-climate-and-energy-policy-11601809200">Climate and Energy</a></li>
+		<li>Don't feel like reading all of those? Here's a quick rundown: <br><a target="_blank" href="https://2020election.procon.org/view.source-summary-chart.php">2020 Presidential Candidate Comparison</a></li>
 	</ul>
 	<hr>
 	<!-- <ul>
