--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -33,6 +33,11 @@
 		<li><a target="_blank" href="https://www.wsj.com/articles/where-trump-and-biden-stand-on-climate-and-energy-policy-11601809200">Climate and Energy</a></li>
 		<li>Don't feel like reading all of those? Here's a quick rundown: <br><a target="_blank" href="https://2020election.procon.org/view.source-summary-chart.php">2020 Presidential Candidate Comparison</a></li>
 	</ul>
+	<div style="text-align: center; margin-bottom: 1rem; font-size: 1rem;"><u><b>Vice Presidential Candidate Comparison:</b></u></div>
+	<ul>
+		<li><a target="_blank" href="https://ballotpedia.org/Mike_Pence">Vice President Mike Pence</a></li>
+		<li><a target="_blank" href="https://ballotpedia.org/Kamala_Harris">Senator Kamala Harris</a></li>
+	</ul>
 	<hr>
 	<!-- <ul>
 		<li>Info on registering, voting, and more at <a target="_blank" href="https://www.vote.org/">vote.org</a> and <a target="_blank" href="https://iwillvote.com/">iwillvote.com</a></li>
@@ -42,7 +47,11 @@
 
 <div class="thumbnail" style="padding: 8px 18px;">
 	<h3 id="debate" style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">2020 Debate Schedule:</h3>
-	<p>Tune in to future debates or watch previous ones if you missed them. Even if you don't like politics, these are going to be <em>spicy</em>. You don't want to miss this. <br>All debates start at 9:00 PM EST.</p>
+	<div style="margin-bottom: 1rem;">
+		Even if you don't like politics, these are going to be <em>spicy</em>. All debates start at <b>9:00 PM EST</b>.
+		<br><span style="font-size: .8rem;">Didn't get to watch them? Here's a quick read on what went down: <a target="_blank" href="https://www.investopedia.com/presidential-debate-recaps-5077379">2020 Presidential and Vice Presidential Debate Coverage</a></span>
+	</div>
+
 	<div style="font-size: 1.3rem; text-align: center; margin-bottom: .7rem;"><b><u>PRESIDENTIAL DEBATES</u></b></div>
 	President Trump vs. Biden
 	<ol>
