--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -130,7 +130,7 @@
 	<h3 id="closeraces" style="font-family: 'Oswald', sans-serif; margin-bottom: 1rem; margin-top: .4rem;">Think your vote doesn't matter? Too lazy? Think again, you silly goose.<br>Here are some close races from recent years:</h3>
 	<ul>
 		<li><strong>2018: </strong>Democratic primary for Baltimore County executive was decided by just 17 votes.</li>
-		<li><strong>2017: </strong>Virginia House of Delegates race ended in a tie out of more than 23,000 votes. The tie was broken by pulling a name out of a bowl (this is sadly not a joke). Republican David Yancey won, which gave Republicans control of the state House by a single seat.</li>
+		<li><strong>2017: </strong>Virginia House of Delegates race ended in a tie out of more than 23,000 votes. <b class="lessbold">The tie was broken by pulling a name out of a bowl (this is sadly not a joke).</b> Republican David Yancey won, which gave Republicans control of the state House by a single seat.</li>
 		<li><strong>2016: </strong>A Wyomning state House GOP primary was decided by just one vote. It was 583 to 582.</li>
 	</ul>
 	<p style="font-size: .8rem;">
