--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -29,8 +29,8 @@
 		<li><a target="_blank" href="https://itif.org/publications/2020/09/28/trump-vs-biden-comparing-candidates-positions-technology-and-innovation">Technology and Innovation</a></li>
 		<li><a target="_blank" href="https://www.everydayhealth.com/healthy-living/trump-vs-biden-on-key-health-issues/">Healthcare</a></li>
 		<li><a target="_blank" href="https://www.bestcolleges.com/blog/biden-trump-education-plans-policy/">Education- Schools and Colleges</a>, <a target="_blank" href="https://www.americanactionforum.org/insight/comparing-trump-and-bidens-k-12-education-plans/">K-12 Education Plans</a></li>
-		<li><a target="_blank" href="https://www.wsj.com/articles/where-trump-and-biden-stand-on-foreign-policy-11600507801">Foreign Policy</a></li>
-		<li><a target="_blank" href="https://www.wsj.com/articles/where-trump-and-biden-stand-on-climate-and-energy-policy-11601809200">Climate and Energy</a></li>
+		<li><a target="_blank" href="https://www.cfr.org/election2020/candidate-tracker">Foreign Policy</a></li>
+		<li><a target="_blank" href="https://t.co/U3Jq7VdJHP">Climate and Energy</a></li>
 		<li>Don't feel like reading all of those? Here's a quick rundown: <br><a target="_blank" href="https://2020election.procon.org/view.source-summary-chart.php">2020 Presidential Candidate Comparison</a></li>
 	</ul>
 	<div style="text-align: center; margin-bottom: 1rem; font-size: 1rem;"><u><b>Vice Presidential Candidate Comparison:</b></u></div>
