2nd debate update

--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -74,8 +74,22 @@
 				</ul>
 			</div>
 		</li>
-		<li><b>October 15</b></li>
+		<li><b>October 15- *regularly scheduled debate is CANCELED*</b></li>
 		<div style="font-size: .9rem;">
+			<div style="padding-top: 1rem;"><u>New Schedule</u></div><i>Both candidates have now scheduled separate, in-person town hall-style events for Oct. 15</i>
+			<br><b>Trump: </b>
+			<ul>
+				<li><b class="lessbold">When/Where: </b>8 pm ET in Miami, hosted by <a target="_blank" href="https://www.nbcnews.com/now">NBC News</a></li>
+				<li><b class="lessbold">Format:</b> Town Hall style, 1 hour</li>
+				<li><b class="lessbold">Moderator:</b> Savannah Guthrie, co-anchor of NBC Today</li>
+			</ul>
+			<b>Biden:</b>
+			<ul>
+				<li><b class="lessbold">When/Where: </b>8 pm ET in Philadelphia, hosted by <a target="_blank" href="https://abcnews.go.com/Live">ABC News</a></li>
+				<li><b class="lessbold">Format:</b> Town Hall style, 2 hours</li>
+				<li><b class="lessbold">Moderator:</b> George Stephanopoulos, ABC News chief anchor</li>
+			</ul>
+			<div style="padding-top: 1rem;"><u>Old Schedule (canceled)</u></div>
 			<ul>
 				<li><b class="lessbold">Moderator:</b>
 					Steve Scully of C-SPAN
