--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -74,9 +74,10 @@
 				</ul>
 			</div>
 		</li>
-		<li><b>October 15- *regularly scheduled debate is CANCELED*</b></li>
+		<li><b>October 15- **UPDATED**</b></li>
 		<div style="font-size: .9rem;">
-			<div style="padding-top: 1rem;"><u>New Schedule</u></div><i>Both candidates have now scheduled separate, in-person town hall-style events for Oct. 15</i>
+			<div style="padding-top: .5rem;"><u>NEW SCHEDULE</u></div>
+			<span style="font-size: .8rem;"><i>Regularly scheduled debate is <u>canceled</u>. Both candidates have now scheduled separate, in-person town hall-style events for Oct. 15</i></span>
 			<br><b>Trump: </b>
 			<ul>
 				<li><b class="lessbold">When/Where: </b>8 pm ET in Miami, hosted by <a target="_blank" href="https://www.nbcnews.com/now">NBC News</a></li>
@@ -89,7 +90,7 @@
 				<li><b class="lessbold">Format:</b> Town Hall style, 2 hours</li>
 				<li><b class="lessbold">Moderator:</b> George Stephanopoulos, ABC News chief anchor</li>
 			</ul>
-			<div style="padding-top: 1rem;"><u>Old Schedule (canceled)</u></div>
+			<div style="padding-top: .5rem;"><u>Old Schedule (canceled)</u></div>
 			<ul>
 				<li><b class="lessbold">Moderator:</b>
 					Steve Scully of C-SPAN
