--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -77,7 +77,7 @@
 		<li><b>October 15- **UPDATED**</b></li>
 		<div style="font-size: .9rem;">
 			<div style="padding-top: .5rem;"><u>NEW SCHEDULE</u></div>
-			<span style="font-size: .8rem;"><i>Regularly scheduled debate is <u>canceled</u>. Both candidates have now scheduled separate, in-person town hall-style events for Oct. 15</i></span>
+			<span style="font-size: .8rem;"><i>Previously scheduled debate is <u>canceled</u>. Both candidates have now scheduled separate, in-person town hall-style events for Oct. 15</i></span>
 			<br><b>Trump: </b>
 			<ul>
 				<li><b class="lessbold">When/Where: </b>8 pm ET in Miami, hosted by <a target="_blank" href="https://www.nbcnews.com/now">NBC News</a></li>
